@@ -6,3 +6,5 @@ mailfront.a
 -lcvm-v2client
 -lbg
 socket.lib
+dl.lib
+-rdynamic
