@@ -58,6 +58,11 @@ message is limited to that number.</tt>
 <li>Support for <a href="patterns.html">pattern matching</a> in the
 message data.
 
+<li>Support for adding additional plugins at run time.  Set
+<tt>$PLUGINS</tt> to a colon separated list of plugin names, and
+optionally set <tt>$PLUGINS_PATH</tt> to the directory in which those
+plugins are contained.
+
 </ul></p>
 
 </body>
