@@ -1,6 +1,7 @@
 -------------------------------------------------------------------------------
 Changes in version 0.99
 
+- Added support for dynamically loaded plugins via $PLUGINS.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
